files/css/style.css
/***** Custom CSS *****/

/*COLORS:
==================================

default font color: #666666
light font color: #999999
dark font color: #262626
body background: #fafafa
main/blue-ish color: #4da5f5
special/yellow-ish color: #FF970D;

=================================*/


/***OUTLINE:
=================================

-1. Temporarily Uncategorized (categorize after)
0.	Resets/Clearfixes
1.	Basics
2. 	General Elements
3.	Header
4.  Page Loader
5.  Footer
6.  Navigation/Menu
7.  Sections
8.  Portfolio
9.  AJAX-Loaded (js) Portfolio
10. Filter (part of Isotope.js)
11. Column Grid
12. Page Elements
13. Animations
14. Other

=================================***/



/** -1. Temporary Uncategorized
------------------------------------------------**/

.scrambler{

}

.link-contact {
	color: #4da5f5;
	font-family: 'Raleway';
	font-weight: 400;
 }


.link-contact:hover {
	color: #4da5f5;

	/*
-webkit-transition: all 200ms linear;
-moz-transition: all 200ms linear;
-o-transition: all 200ms linear;
-ms-transition: all 200ms linear;
transition: all 200ms linear;
*/
 }

.about-section-point h5 {
	color: #666666;
	font-family: 'Raleway' ;
	font-weight: 600;
}

.about-section-point p {

}



/** -1.1 Accordion JS for #experience **/
  .accordion-toggle {
  	cursor: pointer;
  	color: #262626 !important;
  }

  .accordion-toggle:hover {
  	cursor: pointer;
  	color: #FFFFFF !important;
  }

  .accordion-content {display: none;}
  .accordion-content.default {display: none; text-align: left;}


/** 0. Resets/Clearfixes
------------------------------------------------**/
html, body, div, span1, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, font, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	font-size: 100%; }

ol, ul  { list-style: none; }

:focus  { outline: 0; }

.clearfix:after { content: ""; display: block; clear: both; visibility: hidden; font-size: 0;  height: 0; }
.clearfix { *display: inline-block; height: 1%; }
.clear { clear: both; display: block; font-size: 0;	height: 0; line-height: 0; width:100%; }

/* HTML5 display definitions */
article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, dialog { display: block; }
audio, canvas, video { display: inline-block; *display: inline; *zoom: 1; }
audio:not([controls]) { display: none; }
[hidden] { display: none; visibility: hidden; }


/** 1. Basics
------------------------------------------------**/
html {
	height: 100%;
	font-size: 100%;
	/* Prevent iOS text size adjusting on orientation change without disabling user zoom */
	-webkit-text-size-adjust: 100%;
	-ms-text-size-adjust: 100%;
	position: relative;
	}

body {
	font-family: 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
	font-weight: 300;
	font-size:14px;
	line-height: 22px;
	color:#666666;
	text-align: left;
	position: relative;
	background: #fafafa;
	height: 100%;
	}

::selection { background:#ffe49c; color:#262626; }
::-moz-selection { background:#ffe49c; color:#262626; }
::-webkit-selection { background:#ffe49c; color:#262626; }


/** 1.1 Headings **/
h1, h2, h3, h4, h5, h6 {
	font-family: 'Raleway';
	font-weight: 400;
	color: #262626;
	}
	.text-light h1, .text-light h2, .text-light h3, .text-light h4, .text-light h5, .text-light h6 { color: #ffffff; }

h1 { font-size: 100px; line-height: 130px; }
h2 { font-size: 40px; line-height: 60px; }
h3 { font-size: 32px; line-height: 48px; }
h4 { font-size: 22px; line-height: 34px; }
h5 { font-size: 18px; line-height: 26px; }
h6 { font-size: 16px; line-height: 22px; }

h1 b, h2 b, h3 b, h4 b, h5 b, h6 b, h1 strong, h2 strong, h3 strong, h4 strong, h5 strong, h6 strong { font-weight: 600; }


/** 1.2 Header Spacings **/
div h1, div h2, div h3, div h4, div h5, div h6 { margin-top: 20px; }
div h1:first-child, div h2:first-child, div h3:first-child, div h4:first-child, div h5:first-child, div h6:first-child { margin-top: 0px; }

.subtitle { margin-top: 5px; font-weight: 300; color: #666666; letter-spacing: 0.04em; }
.text-light .subtitle { opacity: 0.9; filter: alpha(opacity=90); -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=90)"; }


/** 1.3 Headers for section titles **/
.section-title {
	text-align: center;
	margin-top: -10px; /* line-height spacing fix*/
	margin-bottom: 100px;
	}

.section-title h2 {
	text-transform: uppercase;
	letter-spacing: -0.05em;
	font-weight: 900;
	}


/** 1.4 Links **/
a {
	text-decoration: none;
	color: #4da5f5;
	cursor: pointer;
	-webkit-tap-highlight-color:rgba(0,0,0,0.0);
	}

a:hover {
	color: #262626;
	}

.text-light a:hover { color: #ffffff; }

p a {
		color: #4da5f5 !important;
}

strong a {
		color: #4da5f5 !important;
}

/** 1.5 Embedded content **/
img, object, video {
	max-width: 100%;
	height: auto;
	display: inline-block;
	margin:0;
    vertical-align:top;
	}

img {
	width: auto;
	max-width: 100%;
	border: 0;
	-ms-interpolation-mode: bicubic;
	}

p img { margin-top: 20px; }
p img:first-child { margin-top: 0px; }
img.alignleft { margin: 3px 20px 20px 0; float: left; }
img.alignright { margin: 3px 0px 20px 20px; float: right; }


/** 1.6 Lists **/
ul {
	margin-top: 20px;
	margin-left: 15px;
	list-style: disc;
	}
	div ul:first-child, li ul:first-child { margin-top: 0px; }

ul li {
	line-height: 20px;
	margin-top: 10px;
	}
	ul li:first-child { margin-top: 0px; }


/** 1.7 Miscellaneous **/
p {
	margin-top: 20px;
	}
	div p:first-child {  margin-top: 0px;  }

strong, b, dt {
	font-weight: 600;
}

i, dfn, em {
	font-style: italic;
	}

strong i, b i, dt i, strong em, b em, dt em {
	font-style: italic;
	font-weight: bold;
	}
/* ... */

